<resources>
    <string name="app_name">Football Players</string>

    <string name="league_bundesliga">Bundesliga</string>
    <string name="league_la_liga">La Liga</string>
    <string name="league_liga_nos">Liga NOS</string>
    <string name="league_ligue_1">Ligue 1</string>
    <string name="league_premier_league">Premier League</string>
    <string name="league_serie_a">Serie A</string>

    <string name="error_has_ocurred">An error has occurred</string>
    <string name="connection_error">A connection error has occurred</string>
    <string name="avenger_photo">Avenger Photo</string>
    <string name="detail_avenger">Avenger Detail</string>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
</resources>
